fix: remove echo jwt middleware and validate JWT requests myself
