# pkg/handler/app_context.go
@@ -71,19 +71,9 @@ func NewAppContext() AppContext {
 		AllowHeaders: []string{echo.HeaderOrigin, echo.HeaderContentType, echo.HeaderAccept},
 	}))
 
-	config := middleware.JWTConfig{
-		Claims:     &auth.JwtCustomClaims{},
-		SigningKey: []byte("secret"),
-	}
-
-	e.Use(middleware.JWTWithConfig(config))
-
 	userRepository := repository.UserRepository{Client: db}
 	postRepository := repository.PostRepository{Client: db}
 	timelineRepository := repository.TimelineRepository{Client: db}
-
-	// token, err := auth.AuthService{Repository: &userRepository}.Run("dormire", "aq1dsadsad123123wdasdsadsfsafsafsafsafsaf123123123sdsafasfasfsaf")
-	// fmt.Println(token)
 
 	return AppContext{
 		Db:             &db,
